@@ -160,7 +160,7 @@ OPTION(BUILD_BLOCK_SOLVER_LIB "Build the block solver library" ON)
 if (${BUILD_BLOCK_SOLVER_LIB})
     add_library(jmi_block_solver STATIC ${JMIBlockSources})
     if(NOT MSVC)
-        set_target_properties(jmi_block_solver PROPERTIES COMPILE_FLAGS "-Wall -g -std=c89 -pedantic -Werror -Wno-long-long -O2")
+        set_target_properties(jmi_block_solver PROPERTIES COMPILE_FLAGS "-Wall -g -std=c89 -pedantic -Werror -Wno-long-long -O2 -msse2 -mfpmath=sse")
     endif()
     
     if(JMI_SUNDIALS AND JMI_LAPACK AND JMI_MINPACK)
@@ -174,7 +174,7 @@ OPTION(BUILD_ODE_SOLVER_LIB "Build the ode solver library" ON)
 if (${BUILD_ODE_SOLVER_LIB})
     add_library(jmi_ode_solver STATIC ${JMIODESolverSources})
     if(NOT MSVC)
-        set_target_properties(jmi_ode_solver PROPERTIES COMPILE_FLAGS "-Wall -g -std=c89 -pedantic -Werror -Wno-long-long -O2")
+        set_target_properties(jmi_ode_solver PROPERTIES COMPILE_FLAGS "-Wall -g -std=c89 -pedantic -Werror -Wno-long-long -O2 -msse2 -mfpmath=sse")
     endif()
     
     if(JMI_SUNDIALS)
@@ -188,7 +188,7 @@ OPTION(BUILD_JMI_LIB "Build the jmi library" ON)
 if (${BUILD_JMI_LIB})
     add_library(jmi STATIC ${JMISources})
     if(NOT MSVC)
-        set_target_properties(jmi PROPERTIES COMPILE_FLAGS "-Wall -g -std=c89 -pedantic -Werror -Wno-long-long -O2")
+        set_target_properties(jmi PROPERTIES COMPILE_FLAGS "-Wall -g -std=c89 -pedantic -Werror -Wno-long-long -O2 -msse2 -mfpmath=sse")
         if (WIN32)
             include_directories(${TOP_SRC}/ThirdParty/pthreads/include)
         endif()
